<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TodayVerseActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginStart="10sp"
        android:textSize="20sp"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@color/good"
        android:src="@drawable/goodnight_message" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginStart="10sp"
        android:textSize="30sp"
        />
    <TextView
        android:id="@+id/bible_verse_chapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Chapter"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textStyle="bold|italic"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginEnd="10dp"
        />
    <TextView
        android:id="@+id/bible_verse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:orientation="horizontal"  >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@drawable/rounded_corner"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/backColor"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:id="@+id/btnBack"
        android:layout_marginBottom="20dp"  />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corner"
        android:layout_marginStart="200dp"
        android:backgroundTint="@color/brown"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:id="@+id/btnHome"
        android:layout_marginBottom="20dp"  />
</LinearLayout>

</LinearLayout>