<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GoodNightMessageActivity">



    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginStart="10sp"
        android:textSize="20sp"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/good"
        android:src="@drawable/goodnight_message" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/itune_stock"   />




<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/brown"
        android:textColor="@color/white"
        android:contentDescription="@string/home"
        android:id="@+id/home"
        />

    <Button
        android:layout_width="200dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/primaryColor"
        android:textColor="@color/white"
        android:contentDescription="@string/home"
        android:id="@+id/today"
        />
</LinearLayout>


</LinearLayout>